gw not showing fixed

--- a/css/essential.css
+++ b/css/essential.css
@@ -103,8 +103,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'MyFont';
-    font-weight: bolder;
+    font-family: 'MyFont' !important;
 }
 
 body {
